8201616: Hotspot crashes on linux-sparc after 8189941

Reviewed-by: kvn, stuefe